Preserve order of captured value